# APEXG4MC

./: .gitignore  APEXG4MC  APEXG4MC.cc  APEXMC.cc  CMakeLists.txt  Makefile  README  cmake_install.cmake
include/: AnalysisManager.hh  AnalysisMessenger.hh  BField_Septum_New.hh  DetectorConstruction.hh  DetectorMessenger.hh  EnergyDepositHit.hh  EnergyDepositSD.hh  EventAction.hh  FluxHit.hh  FluxSD.hh  GlobalField.hh  PhysicsList.hh  PhysicsListMessenger.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  SteppingAction.hh
jobs/: ConvertToSIMC.C  MergeG4SIMC.C  README  ext_part1  ext_part2  ext_part3  inpL.txt  inpR.txt  run_apexg4mc.sh
macros/: DetectorSetup.mac  batch.mac  batch_apex.mac  batch_gps.mac  vis.mac  vis.mac~  vis_apex.mac  vis_gps.mac
src/: AnalysisManager.cc  AnalysisMessenger.cc  BField_Septum_New.cc  DetectorConstruction.cc  DetectorMessenger.cc  EnergyDepositHit.cc  EnergyDepositSD.cc  EventAction.cc  FluxHit.cc  FluxSD.cc  GlobalField.cc  PhysicsList.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  SteppingAction.cc
